# AbsoluteUnitApi

./: .gitignore  Dockerfile  PARSING.md  README.md  constants.txt  docker-compose.yaml  flake.nix  pyproject.toml  units.txt
.zed/: debug.json
absolute_unit/: __init__.py  __main__.py  bot.py  config.py  conversion.py  currencies.py  logging.py  parsing.py
absolute_unit/manual_test/: __main__.py
api/: __main__.py  app.py  config.py  conversion.py  currencies.py  errors.py  log.py  parsing.py
api/manual_test/: __main__.py
tests/: conftest.py  conversion_test.py  parsing_test.py  test_currency_data.json
tests/api/: api_test.py  conftest.py
