[project]
name = "AbsoluteUnit"
version = "0.1.0"

requires-python = ">=3.13"
dependencies = [
  "pint",
  "result",
  "rich",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "tomlkit",
  "fastapi[standard]>=0.138.1",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest-asyncio>=1.4.0",
]
